# env-data-mcp

./: .env.example  .gitignore  LICENSES.md  README.md  env-data-mcp-prompt.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  notebooks.yml
notebooks/: .gitkeep  grow_point_sample_demo.ipynb  pnnl_bbox_demo.ipynb
src/env_data_mcp/: __init__.py  helpers.py  models.py  server.py  timing_model.json
src/env_data_mcp/sources/: emit.py  essdive.py  gbif.py  nasa_power.py  oco2.py  openaq.py  sentinel5p.py  soilgrids.py  ssurgo.py
tests/: conftest.py
tests/fixtures/: gbif_sample.parquet
tests/integration/: .gitkeep  test_benchmarks.py  test_emit_live.py  test_essdive_live.py  test_gbif_live.py  test_nasa_power_live.py  test_oco2_live.py  test_openaq_live.py  test_sentinel5p_live.py  test_soilgrids_live.py  test_ssurgo_live.py
tests/unit/: test_emit.py  test_essdive.py  test_gbif.py  test_helpers.py  test_models.py  test_nasa_power.py  test_oco2.py  test_openaq.py  test_sentinel5p.py  test_soilgrids.py  test_ssurgo.py  test_timing_model.py
