[project]
name = "env-data-mcp"
version = "0.1.0"
description = "MCP server providing environmental data (weather, soil, atmospheric, satellite) for arbitrary locations and time windows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "mcp>=1.9",
    "xarray>=2024.0",
    "zarr>=3.0",
    "s3fs>=2024.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pandas>=2.0",
    "numpy>=1.26",
    "earthengine-api>=0.1.400",
    "h5netcdf>=1.8.1",
    "pyarrow>=24.0.0",
    "dask[dataframe]>=2026.3.0",
    "h5py>=3.16.0",
    "rasterio>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "moto[s3]>=5.0",
    "nbmake>=1.5",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
env-data-mcp = "env_data_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/env_data_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests", "notebooks"]
addopts = [
    "--cov=env_data_mcp",
    "--cov-report=term-missing",
    "--nbmake",
    "--nbmake-timeout=300",
    "--ignore=notebooks/api_smoke_test.ipynb",
]
markers = [
    "integration: real API calls; requires network (deselect with -m 'not integration')",
    "smoke: one live call per source to verify connectivity",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["env_data_mcp"]

[tool.ruff.lint.per-file-ignores]
# server.py: side-effect imports must follow `mcp = FastMCP(...)` definition
"src/env_data_mcp/server.py" = ["E402", "F401", "I001"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingModuleSource = "warning"
